--- a/trunk/TODO
+++ b/trunk/TODO
@@ -35,6 +35,8 @@
 
 *  14.5.2:
 ** TODO Freeze
+   - implement -hide-region for rotated nodes (frictionless support)
+   - read only mode for *.dat?
    - automatised pdf-export is not working any longer
      makefile errors: Check tutorials
    - add new functionalities to tutorial and manual
@@ -80,6 +82,7 @@
    - _RETURN somewhat milder red, clashes with reseved vars!
    - constraint equations in -template.el and get functions
 ** Bugs
+   - file mode specification error: (search-failed "nblock\\|eblock\\|cmblock"
    - variables are not highlighted in -skeletons?
    - *create file tmp,mac: macro call: tmp, is not highlighted
    - join not in function list
