--- a/trunk/A-M_APDL_reference.org
+++ b/trunk/A-M_APDL_reference.org
@@ -312,13 +312,21 @@ and you are getting a diffent element highlighting.
 #+end_src
 
 * APDL Reference
-** Idosyncracies
+** Idiosyncrasies
   - No function definitions <- write `command' files (suffix: .mac),
-    or call a macro (arbitrary suffix) with `*use'
-  - No direct array to file export in GUI mode <- write command file
-    for *vwrite, or use a (lookup) table for this purpose
+    or call a macro (arbitrary suffix) with `*use', something close is
+    to fill a "table" arry, interpolating values and possible real
+    indexing A(0.3).
+  - you can get table array values with real index values but must use
+    integers for assigning them the values, the same goes for *vplot:
+    it needs the arry indeces in integers.
+  - *vplot does only plot the columns of arrys, it is not possible to
+    specify rows
+  - No direct array values to file export in GUI mode <- write command
+    file for *vwrite, or use a (lookup) table for this purpose
   - *vwread does not work with C format specifiers in contrast to *vwrite
-  - Still (v14) no round function in sight, someting like nint(max*1e3)/1e3 can do
+  - Still (v14.5) no round function in sight, someting like
+    nint(max*1e3)/1e3 can do
   - One cannot easily get the variable value, either one must assign
     the variable to another one, or use the `*stat' command
   - Operators > and <: 1 < 2 = 1; 2 < 1 = 1; 2 > 1 = 2 :TODO check
@@ -326,8 +334,15 @@ and you are getting a diffent element highlighting.
   - The /contour command does not work on device /show,PNG
   - DELETION OF ARRY parameters without warning only possible with an
     undocumented option: *del,Array,,nopr
+  - *cfwrite does parameter substituion without %%: *cfwrite, X_points
+    = NoN,*cfwrite, the same as X_points = %NoN%????
+  - No direct operation on arrays like A=A*3, take a detour with
+    *voper or *toper
+  - Load symbol vectors /pbc,all,,1 in /prep7 are uniform in
+    contrast to the more ralistic ones in /solu
+    
 
-** File zoo/types (operations guide) under Gnu/Linux?
+** File types (the whole zoo is in the operations guide) under Gnu/Linux?
    |  No | Type                                                             | Name     | temp. | Remark                             | Format  |
    |-----+------------------------------------------------------------------+----------+-------+------------------------------------+---------|
    |   1 | abort                                                            | .abt     |       |                                    | binary  |
@@ -788,6 +803,9 @@ environment!
 #+end_src
 
 * And the rest
+
+  *taxis only for 3 dimension? table(0,1) = 3 is working as well
+
 #+begin_src ansys
   !@@ --! multiline message format command this is tricky: use M-o M-o
   *MSG,UI,Vcoilrms,THTAv,Icoilrms,THTAi,Papprnt,Pelec,PF,indctnc
