--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -2,7 +2,11 @@
 
 (the formatting is targeted for the Emacs Wiki)
 
-Copyright (C) 2006 - 2013  H. Dieter Wilhelm, GPL V3
+Copyright (C) 2006 - 2014  H. Dieter Wilhelm, GPL V3
+
+=== Version 15.0.1 Feb 2014 ===
+
+* improved the `ansys-show-...
 
 ===  Version 14.5.2  Mar 2013 ===
 
